fixed csi deployment task

--- a/linstor/templates/cluster-linstor-csi.yaml.j2
+++ b/linstor/templates/cluster-linstor-csi.yaml.j2
@@ -1,4 +1,4 @@
-## curl -L https://raw.githubusercontent.com/piraeusdatastore/linstor-csi/master/examples/k8s/deploy/linstor-csi-1.17.yaml > cluster-linstor-csi-example.yaml
+## curl -L https://raw.githubusercontent.com/piraeusdatastore/linstor-csi/v0.9.1/examples/k8s/deploy/linstor-csi-1.17.yaml > cluster-linstor-csi-.yaml
 ---
 kind: StatefulSet
 apiVersion: apps/v1
