--- a/linstor/templates/linstor.toml.j2
+++ b/linstor/templates/linstor.toml.j2
@@ -2,13 +2,17 @@
 # For more options check documentation https://www.linbit.com/drbd-user-guide/linstor-guide-1_0-en/#s-linstor-external-database
 
 [db]
-  # user = "linstor"
-  # password = "linstor"
+{% if linstor_db_user | d('') | length %}
+  user = "{{ linstor_db_user }}"
+{% endif %}
+{% if linstor_db_password | d('') | length %}
+  password = "{{ linstor_db_password }}"
+{% endif %}
 
   connection_url = "{{ linstor_db_connection_url }}"
 
 {% if linstor_db_ca_certificate | d('') | length %}
-## if you want to use TLS, only since LINSTOR 1.2.1
+  ## if you want to use TLS, only since LINSTOR 1.2.1
   ca_certificate = "{{ linstor_db_ca_certificate }}"
 {% endif %}
 
@@ -17,11 +21,11 @@
 {% endif %}
 
 {% if linstor_db_key | d('') | length %}
-## if you want to use client TLS authentication too, only since LINSTOR 1.2.1
+  ## if you want to use client TLS authentication too, only since LINSTOR 1.2.1
   client_key_pkcs8_pem = "{{ linstor_db_key }}"
 {% endif %}
 
-{% if linstor_db_secret | d('') | length %}
-## set client_key_password if private key has a password
-  client_key_password = "{{ linstor_db_secret }}"
+{% if linstor_db_key_password | d('') | length %}
+  ## set client_key_password if private key has a password
+  client_key_password = "{{ linstor_db_key_password }}"
 {% endif %}
