--- a/linstor/templates/cluster-linstor-csi.yaml.j2
+++ b/linstor/templates/cluster-linstor-csi.yaml.j2
@@ -22,7 +22,7 @@ spec:
       serviceAccount: linstor-csi-controller-sa
       containers:
         - name: csi-provisioner
-          image: quay.io/k8scsi/csi-provisioner:v1.5.0
+          image: "quay.io/k8scsi/csi-provisioner:{{ csi_provisioner_tag }}"
           args:
             - "--csi-address=$(ADDRESS)"
             - "--v=5"
@@ -36,7 +36,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: csi-attacher
-          image: quay.io/k8scsi/csi-attacher:v2.1.1
+          image: "quay.io/k8scsi/csi-attacher:{{ csi_attacher_tag }}"
           args:
             - "--v=5"
             - "--csi-address=$(ADDRESS)"
@@ -49,7 +49,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: csi-resizer
-          image: quay.io/k8scsi/csi-resizer:v0.5.0
+          image: "quay.io/k8scsi/csi-resizer:{{ csi_resizer_tag }}"
           args:
           - "--v=5"
           - "--csi-address=$(ADDRESS)"
@@ -61,7 +61,7 @@ spec:
           - mountPath: /var/lib/csi/sockets/pluginproxy/
             name: socket-dir
         - name: csi-snapshotter
-          image: quay.io/k8scsi/csi-snapshotter:v2.0.1
+          image: "quay.io/k8scsi/csi-snapshotter:{{ csi_snapshotter_tag }}"
           args:
             - "-csi-address=$(ADDRESS)"
             - "-timeout=120s"
@@ -73,7 +73,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: linstor-csi-plugin
-          image: quay.io/piraeusdatastore/piraeus-csi:v0.9.1
+          image: "quay.io/piraeusdatastore/piraeus-csi:{{ linstor_csi_plugin_tag }}"
           args:
             - "--csi-endpoint=$(CSI_ENDPOINT)"
             - "--node=$(KUBE_NODE_NAME)"
@@ -231,7 +231,7 @@ spec:
       serviceAccount: linstor-csi-node-sa
       containers:
         - name: csi-node-driver-registrar
-          image: quay.io/k8scsi/csi-node-driver-registrar:v1.2.0
+          image: "quay.io/k8scsi/csi-node-driver-registrar:{{ csi_node_driver_registrar_tag }}"
           args:
             - "--v=5"
             - "--csi-address=$(ADDRESS)"
@@ -255,7 +255,7 @@ spec:
             - name: registration-dir
               mountPath: /registration/
         - name: linstor-csi-plugin
-          image: quay.io/piraeusdatastore/piraeus-csi:v0.9.1
+          image: "quay.io/piraeusdatastore/piraeus-csi:{{ linstor_csi_plugin_tag }}"
           args:
             - "--csi-endpoint=$(CSI_ENDPOINT)"
             - "--node=$(KUBE_NODE_NAME)"
