--- a/linstor-csi/templates/cluster-linstor-csi.yaml.j2
+++ b/linstor-csi/templates/cluster-linstor-csi.yaml.j2
@@ -1,4 +1,4 @@
-## curl -L https://raw.githubusercontent.com/piraeusdatastore/linstor-csi/v0.10.2/examples/k8s/deploy/linstor-csi-1.19.yaml > cluster-linstor-csi.yaml
+## curl -L https://raw.githubusercontent.com/piraeusdatastore/linstor-csi/v0.12.0/examples/k8s/deploy/linstor-csi-1.19.yaml > cluster-linstor-csi.yaml
 ---
 kind: StatefulSet
 apiVersion: apps/v1
@@ -19,7 +19,7 @@ spec:
         role: linstor-csi
     spec:
       priorityClassName: system-cluster-critical
-      serviceAccount: linstor-csi-controller-sa
+      serviceAccountName: linstor-csi-controller-sa
       containers:
         - name: csi-provisioner
           image: "quay.io/k8scsi/csi-provisioner:{{ csi_provisioner_tag }}"
@@ -238,7 +238,7 @@ spec:
         role: linstor-csi
     spec:
       priorityClassName: system-node-critical
-      serviceAccount: linstor-csi-node-sa
+      serviceAccountName: linstor-csi-node-sa
       containers:
         - name: csi-node-driver-registrar
           image: "quay.io/k8scsi/csi-node-driver-registrar:{{ csi_node_driver_registrar_tag }}"
@@ -396,3 +396,17 @@ rules:
   - apiGroups: ["snapshot.storage.k8s.io"]
     resources: ["volumesnapshots/status"]
     verbs: ["update"]
+
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: linstor-csi-snapshotter-binding
+subjects:
+  - kind: ServiceAccount
+    name: linstor-csi-controller-sa
+    namespace: kube-system
+roleRef:
+  kind: ClusterRole
+  name: linstor-csi-snapshotter-role
+  apiGroup: rbac.authorization.k8s.io
