--- a/linstor/templates/linstor-client.conf.j2
+++ b/linstor/templates/linstor-client.conf.j2
@@ -1,2 +1,6 @@
 [global]
+{% if linstor_controllers | d('') != '' %}
+controllers={{ linstor_controllers }}
+{% else %}
 controllers={% for node in groups['linstor_controllers'] %}{{ hostvars[node]['ansible_all_ipv4_addresses']| ipaddr(drbd_replication_network) | first }}{% if not loop.last %},{% endif %}{% endfor %}
+{% endif %}
